--- a/WorkTime.Web/Views/Shared/_Layout.cshtml
+++ b/WorkTime.Web/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     
 </head>
-<body> 
-        <!--
-        hello, what do you looking for?
+<body style="background-color: #f0f4f9">
+    <!--
+        hello sir, what do you looking for?
         ⠀⠀⠀⠀⠀._⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀__.
         ⠀⠀⠀⠀⠀⠀⠀⠀/ \"-.⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀,-",'/⠀
         ⠀⠀⠀⠀⠀⠀⠀(⠀⠀⠀\⠀,"--.__.--".,'⠀/⠀⠀
@@ -40,8 +40,8 @@
         <partial name="_NavBar" />
     </header>
     <partial name="_SideBar" />
-    <div id="mainContainer">
-        <main role="main" class="pb-3 container-fluid">
+    <div id="mainContainer" class="m-4" style="border-radius:10px; background-color: #FFF">
+        <main role="main" class="pb-5 container-fluid">
             @RenderBody()
         </main>
     </div>
