Изменение фона body и main контейнера

--- a/WorkTime.Web/Views/Shared/_Layout.cshtml
+++ b/WorkTime.Web/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     
 </head>
-<body style="background-color: #f0f4f9">
+<body>
     <!--
         hello sir, what do you looking for?
         ⠀⠀⠀⠀⠀._⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀__.
@@ -40,7 +40,7 @@
         <partial name="_NavBar" />
     </header>
     <partial name="_SideBar" />
-    <div id="mainContainer" class="m-4" style="border-radius:10px; background-color: #FFF">
+    <div id="mainContainer" class="m-4" style="border-radius:10px; background: rgba(255, 255, 255, 0.5);">
         <main role="main" class="pb-5 container-fluid">
             @RenderBody()
         </main>
