--- a/WorkTime.Web/Views/Home/Index.cshtml
+++ b/WorkTime.Web/Views/Home/Index.cshtml
@@ -49,11 +49,11 @@
         </div>
         
         <div class="row">
-            <div class="h-100 start-screen-card p-4 mt-4 col" style="background-color: #dde5dc;">
+            <div class="h-100 start-screen-card p-4 mt-4 col" style="background-color: #edf3ec;">
                 <b class="h2">Статистика заработанных денег из последнего счёта</b>
-                <canvas class="mt-4 pb-3 pt-2" id="doughnut-chart" width="175"></canvas>
+                <canvas class="h-100 w-100 mt-4 pb-3 pt-2" id="doughnut-chart" width="175"></canvas>
             </div>
-            <div class="h-100 start-screen-card p-4 mt-4 ms-4 col-8" style="background-color: #f1eff0;">
+            <div class="h-100 start-screen-card p-4 mt-4 ms-4 col-8 " style="background-color: #f1eff0;">
                 <b class="h2">Статистика выполненных задач за пол года</b>
                 <canvas class="mt-4 pb-3 pt-2" id="line-chart" width="175"></canvas>
             </div>
