--- a/WorkTime.Web/Views/Shared/_Layout.cshtml
+++ b/WorkTime.Web/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
         <partial name="_NavBar" />
     </header>
     <partial name="_SideBar" />
-    <div id="mainContainer" class="m-4" style="border-radius:10px; background: rgba(255, 255, 255, 0.5);">
+    <div id="mainContainer">
         <main role="main" class="pb-5 container-fluid">
             @RenderBody()
         </main>
