--- a/WorkTime.Web/Views/Shared/_NavBar.cshtml
+++ b/WorkTime.Web/Views/Shared/_NavBar.cshtml
@@ -6,7 +6,7 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow">
-        <div class="container-fluid" >
+        <div class="container-fluid" style="flex-wrap: unset!important">
             <button class="btn light-element-hover" type="button" onclick="toggleSideBar()">
                     <i class="fa fa-bars light-element" aria-hidden="true"></i>
                 </button>
@@ -15,11 +15,8 @@
                         src="~/resources/logo.svg"
                     />
                     </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+           
+            <div class="navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     
                 </ul>
