--- a/WorkTime.Web/Views/Shared/_SideBar.cshtml
+++ b/WorkTime.Web/Views/Shared/_SideBar.cshtml
@@ -18,34 +18,34 @@
                 <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="sideBarLinks">
                     <li class="nav-item">
                         <a type="button" class="nav-link align-middle px-0" asp-area="" asp-controller="Home" asp-action="Index">
-                            <i class="my-2 ms-3 bx bxs-home-alt-2"></i> <span class="ms-2 d-none d-sm-inline text-dark">Главная</span>
+                            <i class="my-2 ms-3 bx bxs-home-alt-2"></i> <span class="ms-2 d-sm-inline text-dark">Главная</span>
                         </a>
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link align-middle px-0" asp-area="" asp-controller="Invoices"
                        asp-action="MyInvoices" asp-route-id="@UserInfo.GetUserId()">
-                            <i class="my-2 ms-3 bx bxs-food-menu"></i> <span class="ms-2 d-none d-sm-inline text-dark">Мои счета</span>
+                            <i class="my-2 ms-3 bx bxs-food-menu"></i> <span class="ms-2 d-sm-inline text-dark">Мои счета</span>
                         </a>
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link align-middle px-0" asp-area="" asp-controller="Tasks"
                        asp-action="MyTasks" asp-route-id="@UserInfo.GetUserId()">
-                            <i class="my-2 ms-3 bx bx-code"></i> <span class="ms-2 d-none d-sm-inline text-dark">Мои задачи</span>
+                            <i class="my-2 ms-3 bx bx-code"></i> <span class="ms-2 d-sm-inline text-dark">Мои задачи</span>
                         </a>
                     </li>
                     @if (User.IsInRole("Administrator") || User.IsInRole("Manager"))
                     {
                         <li class="nav-item">
                             <a class="nav-link align-middle px-0" asp-area="" asp-controller="Projects" asp-action="Index">
-                                <i class="my-2 ms-3 bx bx-folder"></i> <span class="ms-2 d-none d-sm-inline text-dark">Проекты</span>
+                                <i class="my-2 ms-3 bx bx-folder"></i> <span class="ms-2 d-sm-inline text-dark">Проекты</span>
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <a class="nav-link align-middle px-0" asp-area="" asp-controller="Tasks" asp-action="Index">
-                                <i class="my-2 ms-3 bx bx-clipboard"></i> <span class="ms-2 d-none d-sm-inline text-dark">Задачи</span>
+                                <i class="my-2 ms-3 bx bx-clipboard"></i> <span class="ms-2 d-sm-inline text-dark">Задачи</span>
                             </a>
                         </li>
                     }
@@ -53,7 +53,7 @@
                     {
                         <li class="nav-item">
                             <a class="nav-link align-middle px-0" asp-area="" asp-controller="Invoices" asp-action="Index">
-                                <i class="my-2 ms-3 bx bxs-food-menu"></i> <span class="ms-2 d-none d-sm-inline text-dark">Счета</span>
+                                <i class="my-2 ms-3 bx bxs-food-menu"></i> <span class="ms-2 d-sm-inline text-dark">Счета</span>
                             </a>
                         </li>
                     }
@@ -61,7 +61,7 @@
                     {
                         <li class="nav-item">
                             <a class="nav-link align-middle px-0" asp-area="" asp-controller="Users" asp-action="Index">
-                                <i class="my-2 ms-3 bx bxs-user-account"></i> <span class="ms-2 d-none d-sm-inline text-dark">Пользователи</span>
+                                <i class="my-2 ms-3 bx bxs-user-account"></i> <span class="ms-2 d-sm-inline text-dark">Пользователи</span>
                             </a>
                         </li>
                     }
