--- a/WorkTime.Web/wwwroot/css/site.css
+++ b/WorkTime.Web/wwwroot/css/site.css
@@ -2,6 +2,7 @@
 @import 'navigation/navcustom.css';
 @import 'objects/columns.css';
 @import 'objects/login-form.css';
+@import 'objects/start-screen-objects.css';
 @import 'objects/chart.css';
 @import 'controls/buttons.css';
 
@@ -53,3 +54,25 @@ body {
 .no-scroll {
     overflow: hidden;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.25);
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.25);
+    -webkit-border-radius: 10px;
+    border-radius: 4px;
+    background: rgba(175, 175, 192, 0.8);
+}
+
+    ::-webkit-scrollbar-thumb:window-inactive {
+        background: rgba(175, 175, 192, 0.8);
+    }
