--- a/WorkTime.Web/Views/Home/Index.cshtml
+++ b/WorkTime.Web/Views/Home/Index.cshtml
@@ -107,7 +107,8 @@
                     data: [@wt[5].tasks, @wt[4].tasks, @wt[3].tasks, @wt[2].tasks, @wt[1].tasks, @wt[0].tasks],
                     label: "Количество выполненных задач",
                     borderColor: "#3e95cd",
-                    fill: false
+                    fill: false,
+                    tension: 0.3
                 }
                 ]
             },
