--- a/WorkTime.Web/Views/Tasks/Index.cshtml
+++ b/WorkTime.Web/Views/Tasks/Index.cshtml
@@ -60,7 +60,7 @@
     */
 }
 <div class="container-fluid">
-    <div class="pb-3" style="white-space: nowrap; overflow-x: auto;">
+    <div class="pb-3" id="card-cont" style="white-space: nowrap; overflow-x: auto;">
         <div hidden id="arrow-slide-right" style="position:absolute; top:50%; left: 90%; z-index:999">roflan</div>
         <div hidden id="arrow-slide-left" style="position:absolute; top:50%; left: 90%; z-index:999">roflan</div>
         <div class="task-column mx-3 d-inline-block task-column-formed" style="float: none">
@@ -84,10 +84,10 @@
                                 <a asp-action="Details" asp-route-id="@item.Id">@item.TaskName</a>
                             </dd>
 
-                            <dd class="">
+                            <dd class="carddtext">
                                 <span style="font-weight: 700;">Исполнитель:</span> @UserInfo.GetUserName(item.PerformerId)
                             </dd>
-                            <dd class="">
+                            <dd class="carddtext">
                                 @if (item.ProjectId != null)
                                 {
                                     <span style="font-weight: 700;">Проект:</span> @ProjectInfo.GetName(item.ProjectId)
@@ -123,10 +123,10 @@
                                 <a asp-action="Details" asp-route-id="@item.Id">@item.TaskName</a>
                             </dd>
 
-                            <dd class="">
+                            <dd class="carddtext">
                                 <span style="font-weight: 700;">Исполнитель:</span> @UserInfo.GetUserName(item.PerformerId)
                             </dd>
-                            <dd class="">
+                            <dd class="carddtext">
                                 @if (item.ProjectId != null)
                                 {
                                     <span style="font-weight: 700;">Проект:</span> @ProjectInfo.GetName(item.ProjectId)
@@ -162,10 +162,10 @@
                                 <a asp-action="Details" asp-route-id="@item.Id">@item.TaskName</a>
                             </dd>
 
-                            <dd class="">
+                            <dd class="carddtext">
                                 <span style="font-weight: 700;">Исполнитель:</span> @UserInfo.GetUserName(item.PerformerId)
                             </dd>
-                            <dd class="">
+                            <dd class="carddtext">
                                 @if (item.ProjectId != null)
                                 {
                                     <span style="font-weight: 700;">Проект:</span> @ProjectInfo.GetName(item.ProjectId)
@@ -201,10 +201,10 @@
                                 <a asp-action="Details" asp-route-id="@item.Id">@item.TaskName</a>
                             </dd>
 
-                            <dd class="">
+                            <dd class="carddtext">
                                 <span style="font-weight: 700;">Исполнитель:</span> @UserInfo.GetUserName(item.PerformerId)
                             </dd>
-                            <dd class="">
+                            <dd class="carddtext">
                                 @if (item.ProjectId != null)
                                 {
                                     <span style="font-weight: 700;">Проект:</span> @ProjectInfo.GetName(item.ProjectId)
@@ -224,14 +224,17 @@
 
 @section Scripts {
     <script>
-        function checkWindow(){
-            if (window.screen.width < 1620) {
-                document.getElementById("arrow-slide")
+        checkWindow();
+        function checkWindow() {
+            if (window.innerWidth < 1006) {
+                document.getElementById("cards-cont").style.cssText = 'white-space: nowrap; overflow-x: auto;';
             }
             else {
-
+                document.getElementById("cards-cont").style.cssText = 'overflow-x: auto;';
             }
         }
+
+        window.onresize = checkWindow;
 
         function deleteTask(id, name) {
             if (confirm('Вы хотите удалить задачу "' + name + '"?')) {
