--- a/WorkTime.Web/Views/Home/Index.cshtml
+++ b/WorkTime.Web/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 @inject UserInformation UserInfo
 
 @{
-    ViewData["Title"] = "Главная";
+    ViewData["Title"] = "Главная страница";
 }
 
 @if (SignInManager.IsSignedIn(User))
