--- a/WorkTime.Web/Views/Invoices/Details.cshtml
+++ b/WorkTime.Web/Views/Invoices/Details.cshtml
@@ -3,10 +3,10 @@
 @model WorkTime.Models.Invoice
 
 @{
-    ViewData["Title"] = "Детали счёта";
+    ViewData["Title"] = "Информация о счёте";
 }
 
-<h1>Детали счёта</h1>
+<h1>Информация о счёте</h1>
 
 <div>
     <hr />
