--- a/WorkTime.Web/Views/Invoices/Index.cshtml
+++ b/WorkTime.Web/Views/Invoices/Index.cshtml
@@ -4,12 +4,10 @@
 @inject ProjectInformation ProjectInfo
 
 @{
-    ViewData["Title"] = "Счета";
+    ViewData["Title"] = "Список счетов";
 }
 
-
-
-<h1>Счета</h1>
+<h1>Список счетов</h1>
 
 @if (ViewBag.Project != null)
 {
