--- a/WorkTime.Web/Views/Projects/Create.cshtml
+++ b/WorkTime.Web/Views/Projects/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model WorkTime.Models.Project
 
 @{
-    ViewData["Title"] = "Создание проекта";
+    ViewData["Title"] = "Добавление проекта";
 }
 
-<h1>Создание проекта</h1>
+<h1>Добавление проекта</h1>
 
 <hr />
 <div class="row">
