--- a/WorkTime.Web/Views/Projects/Index.cshtml
+++ b/WorkTime.Web/Views/Projects/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<WorkTime.Models.Project>
 
 @{
-    ViewData["Title"] = "Проекты";
+    ViewData["Title"] = "Список проектов";
 }
 
-<h1>Проекты</h1>
+<h1>Список проектов</h1>
 
 <p>
-    <a type="button" class="btn btn-primary" asp-action="Create">Создать новый</a>
+    <a type="button" class="btn btn-primary" asp-action="Create">Добавить проект</a>
 </p>
 <table class="table">
     <thead>
