--- a/WorkTime.Web/Views/Tasks/Details.cshtml
+++ b/WorkTime.Web/Views/Tasks/Details.cshtml
@@ -3,7 +3,7 @@
 @inject UserInformation UserInfo
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Детали задачи";
 }
 
 <h4>Задача: @Model.TaskName</h4>
