--- a/WorkTime.Web/Views/Tasks/Index.cshtml
+++ b/WorkTime.Web/Views/Tasks/Index.cshtml
@@ -4,10 +4,10 @@
 @model IEnumerable<WorkTime.Models.WorkTask>
 
 @{
-    ViewData["Title"] = "Задачи";
+    ViewData["Title"] = "Список задач";
 }
 
-<h1>Задачи</h1>
+<h1>Список задач</h1>
 
 <p>
     <a type="button" class="btn btn-primary" asp-action="Create">Создать задачу</a>
