--- a/WorkTime.Web/Views/Projects/Details.cshtml
+++ b/WorkTime.Web/Views/Projects/Details.cshtml
@@ -1,23 +1,23 @@
 ﻿@model WorkTime.Models.Project
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Информация о проекте";
 }
 
-<h1>Details</h1>
+<h1>Информация о проекте</h1>
 
 <div>
     <h4>Project</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            Название
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Bonus)
+            Бонус
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Bonus)
@@ -28,6 +28,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Редактировать</a> |
+    <a asp-action="Index">Вернуться к списку</a>
 </div>
