--- a/WorkTime.Web/Views/Tasks/Create.cshtml
+++ b/WorkTime.Web/Views/Tasks/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model WorkTime.Models.WorkTask
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Создание задачи";
 }
 
-<h1>Создать задачу</h1>
+<h1>Создание задачи</h1>
 
 <hr />
 <div class="row">
@@ -43,7 +43,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Вернуться к списку</a>
 </div>
 
 
