--- a/WorkTime.Web/Views/Users/Create.cshtml
+++ b/WorkTime.Web/Views/Users/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model WorkTime.Models.AspNetUser
 
 @{
-    ViewData["Title"] = "Создание нового пользователя";
+    ViewData["Title"] = "Добавление нового пользователя";
 }
 
-<h1>Создание нового пользователя</h1>
+<h1>Добавление нового пользователя</h1>
 
 <hr />
 <div class="row">
