--- a/WorkTime.Web/Views/Users/Details.cshtml
+++ b/WorkTime.Web/Views/Users/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model WorkTime.Models.AspNetUser
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Информация о пользователе";
 }
 
-<h1>Details</h1>
+<h1>Информация о пользователе</h1>
 
 <div>
     <h4>AspNetUser</h4>
@@ -97,6 +97,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Редактировать</a> |
+    <a asp-action="Index">Вернуться к списку</a>
 </div>
