--- a/WorkTime.Web/Views/Users/Edit.cshtml
+++ b/WorkTime.Web/Views/Users/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model WorkTime.Models.AspNetUser
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Редактирование пользователя";
 }
 
-<h1>Edit</h1>
+<h1>Редактирование пользователя</h1>
 
 <h4>AspNetUser</h4>
 <hr />
@@ -91,7 +91,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Вернуться к списку</a>
 </div>
 
 @section Scripts {
