--- a/WorkTime.Web/Views/Users/Index.cshtml
+++ b/WorkTime.Web/Views/Users/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Список пользователей</h1>
 
 <p>
-    <a type="button" class="btn btn-primary" asp-action="Create">Создать пользователя</a>
+    <a type="button" class="btn btn-primary" asp-action="Create">Добавить пользователя</a>
 </p>
 <table class="table">
     <thead>
